Now able to query files from a dedicated server! Profile Picture are handled by that.
