# GameOn.Documentation/GameOn!.swagger.json
@@ -7,7 +7,7 @@
       "name": "Valentin Virot",
       "email": "virot.valentin@gmail.com"
     },
-    "version": "5.2.9"
+    "version": "5.4.0"
   },
   "paths": {
     "/Admin/dashboard": {
@@ -1286,6 +1286,54 @@
                 }
               }
             }
+          },
+          "500": {
+            "description": "Unknown error happened."
+          }
+        }
+      }
+    },
+    "/Player/{playerId}/pp": {
+      "get": {
+        "tags": ["Player"],
+        "summary": "Get player's profile picture from server.",
+        "parameters": [
+          {
+            "name": "playerId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Player's profile picture from server.",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "No profile picture found."
           },
           "500": {
             "description": "Unknown error happened."
